--- a/AppointmentsApp/.gitignore
+++ b/AppointmentsApp/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/main/**
 !**/src/test/**
 
+/bin/
+/node_modules/
+
 ### STS ###
 .apt_generated
 .classpath
@@ -29,3 +32,12 @@ build/
 
 ### VS Code ###
 .vscode/
+/install_tools.bat
+/node_etw_provider.man
+/node.exe
+/nodevars.bat
+/npm
+/npm.cmd
+/npx
+/npx.cmd
+/package-lock.json
