--- a/AppointmentsApp/frontend/package.json
+++ b/AppointmentsApp/frontend/package.json
@@ -6,7 +6,8 @@
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "0.9.5"
+    "react-scripts": "^3.3.1",
+    "reactstrap": "^8.4.1"
   },
   "devDependencies": {},
   "scripts": {
@@ -15,6 +16,17 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8080"
-  
+  "proxy": "http://localhost:8080",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
