--- a/AppointmentsApp/frontend/package.json
+++ b/AppointmentsApp/frontend/package.json
@@ -3,11 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap-material-design": "^4.1.1",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-dom-factories": "^1.0.2",
+    "react-resizable": "^1.10.1",
     "react-scripts": "^3.3.1",
-    "reactstrap": "^8.4.1"
+    "react-selectize": "^3.0.1",
+    "react-transition-group": "^4.3.0",
+    "reactstrap": "^8.4.1",
+    "tether": "^1.4.7"
   },
   "devDependencies": {},
   "scripts": {
@@ -28,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
