--- a/AppointmentsApp/frontend/package.json
+++ b/AppointmentsApp/frontend/package.json
@@ -6,9 +6,11 @@
     "bootstrap-material-design": "^4.1.1",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-datepicker": "^2.12.0",
     "react-dom": "^16.12.0",
     "react-dom-factories": "^1.0.2",
     "react-resizable": "^1.10.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.1",
     "react-selectize": "^3.0.1",
     "react-transition-group": "^4.3.0",
